# synthese_image

./: .gitignore  CMakeLists.txt  Makefile  README.md  temp.c
include/: Camera.h  CameraConfig.h  Object.h  Objet.h  Rayon.h  Utils.h
src/: Camera.c  CameraConfig.c  Main.c  Object.c  Objet.c  Rayon.c  Utils.c
